examples/test/testpolicy3563.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3563
  namespace: namespace95
spec:
  podSelector:
    matchLabels:
      key39: value33
      key29: value46
      key7: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value11
      podSelector:
        matchLabels:
          key24: value4
